# ITSDataQualityMiner

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cxx
download/pp/14.000000/: output.txt
include/: CCDBServer.h  DataQualityProcessor.h  DeadMapDecoder.h  ITSGeometry.h
inputs/: LHC24aq.txt  LHC24ar.txt  LHC24as.txt  LHC25aa.txt  LHC25ab.txt  LHC25ac.txt  LHC25ad.txt  LHC25ae.txt  LHC25af.txt  LHC25ag.txt  LHC25ah.txt  LHC25ai.txt  LHC25ak.txt  LHC25al.txt  LHC25am.txt  LHC25an.txt  LHC25ao.txt  LHC25ap.txt  LHC25aq.txt  LHC25ar.txt  LHC25as.txt  LHC26ab.txt  LHC26ac.txt  Periods.txt
src/: CCDBServer.cpp  DataQualityProcessor.cxx  DeadMapDecoder.cpp  ITSGeometry.cpp  download_runs_mw_cxx.d  download_runs_mw_cxx_ACLiC_dict_rdict.pcm
